--- a/activities/backgroundimage/backgroundimages.css
+++ b/activities/backgroundimage/backgroundimages.css
@@ -10,8 +10,8 @@ body {
     min-height: 80px;
     background-image: url(Colorful-Natural-Tree80.png);
     background-repeat: no-repeat;
-    background-position: center;
-    background: url(Colorful-Natural-Tree80.png) no-repeat center;
+    background-position: right;
+    background: url(Colorful-Natural-Tree80.png) no-repeat right;
 }
 .mylist {
     list-style-type: square;
